<resources>
    <string name="app_name">practive</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="register_account">Register Account?</string>
    <string name="todo">TODO</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password1">Password</string>
    <string name="username1">Username</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_sign_in">Already have an Account? Sign in</string>
    <string name="todo1">TODO</string>
    <string name="books">BOOKS</string>
    <string name="books1">BOOKS</string>
    <string name="borrow1">BORROW</string>
    <string name="account1">ACCOUNT</string>
    <string name="borrow">BORROW</string>
    <string name="account">account\n</string>
    <string name="books2">books2\n</string>
    <string name="borrow2">BORROW</string>
    <string name="account2">ACCOUNT</string>
    <string name="borrow3">BORROW</string>
    <string name="books3">books3\n</string>
    <string name="account3">ACCOUNT</string>
    <string name="account4">ACCOUNT</string>
    <string name="borrow4">borrow4\n</string>
    <string name="books4">books4\n</string>
    <string name="aaccount">ACCOUNT</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="back_to_homepage">Back to Homepage</string>
    <string name="adbooks">BOOKS</string>
    <string name="adtada">TADA</string>
    <string name="adadd">ADD</string>
    <string name="add1">ADD</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="book_name">Book Name</string>
    <string name="author">Author</string>
    <string name="publish">Publish</string>
    <string name="book_name1">Book Name</string>
    <string name="author1">Author</string>
    <string name="publish1">Publish</string>
    <string name="publish2">Publish</string>
    <string name="click">click</string>
    <string name="add">Add</string>
    <string name="title">Title</string>
    <string name="publish_date">Publish Date</string>
    <string name="author2">Author</string>
    <string name="add2">Add</string>
    <string name="title3">Title:</string>
    <string name="author3">Author:</string>
    <string name="published_date">Published Date:</string>
    <string name="book_image">Book Image</string>
    <string name="borrow12">Borrow</string>
    <string name="book_log">BOOK LOG</string>
    <string name="book_log1">book_log</string>
    <string name="book_log2">book_log</string>
    <string name="book_log12">BOOK LOG</string>
    <string name="book_log32">BOOK LOG</string>
    <string name="description">Description</string>
    <string name="description123">Description</string>
</resources>