<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/adminlogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/greenbackground"
    android:backgroundTint="#A8D8B8"
    android:backgroundTintMode="multiply"
    android:paddingStart="20sp"
    tools:context=".admin.Admin"
    tools:ignore="RtlSymmetry">


    <ImageView
        android:id="@+id/sdsc"
        android:layout_width="400dp"
        android:layout_height="287dp"
        android:layout_marginStart="13dp"
        android:contentDescription="@string/todo"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.119"
        app:srcCompat="@drawable/nyahalo" />

    <EditText
        android:id="@+id/aduser"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/wborder"
        android:drawableStart="@drawable/baseline_admin_panel_settings_24"
        android:drawablePadding="20dp"
        android:ems="10"
        android:fontFamily="sans-serif-thin"
        android:hint="@string/username"
        android:inputType="text"
        android:paddingLeft="20sp"
        android:paddingRight="20sp"
        android:textColor="@color/white"
        android:textColorHint="#9EFFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sdsc"
        app:layout_constraintVertical_bias="0.451" />

    <EditText
        android:id="@+id/adpass"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginTop="5dp"
        android:autofillHints="password"
        android:background="@drawable/wborder"
        android:drawableStart="@drawable/security"
        android:drawablePadding="20dp"
        android:ems="10"
        android:fontFamily="sans-serif-thin"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="20sp"
        android:paddingRight="20sp"
        android:textColor="#FFFFFF"
        android:textColorHint="#9EFFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/adbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aduser"
        app:layout_constraintVertical_bias="0.08"
        app:passwordToggleEnabled="true" />

    <Button
        android:id="@+id/adbutton"
        android:layout_width="149dp"
        android:layout_height="54dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="#2C3E50"
        android:focusable="true"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aduser"
        app:layout_constraintVertical_bias="0.621" />

    <TextView
        android:id="@+id/back2home"
        android:layout_width="144dp"
        android:layout_height="31dp"
        android:contentDescription="@string/todo3"
        android:fontFamily="sans-serif-medium"
        android:scrollbarSize="10dp"
        android:text="@string/back_to_homepage"
        android:textColor="#E9E9EB"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adbutton"
        app:layout_constraintVertical_bias="0.145"
        tools:ignore="TextSizeCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>