<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/greenbackground"
    android:backgroundTint="#A8D8B8"
    android:backgroundTintMode="multiply"
    tools:context=".Register">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="380dp"
        android:layout_height="281dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/todo"
        android:scaleType="centerInside"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/nyahalo" />

    <EditText
        android:id="@+id/name"
        android:layout_width="270dp"
        android:layout_height="49dp"
        android:autofillHints="name"
        android:background="@drawable/wborder"
        android:drawablePadding="20dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text"
        android:paddingLeft="20sp"
        android:paddingRight="20sp"
        android:textColor="@color/white"
        android:textColorHint="#E9E9EB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.427" />

    <EditText
        android:id="@+id/usernem"
        android:layout_width="270dp"
        android:layout_height="49dp"
        android:autofillHints="username"
        android:background="@drawable/wborder"
        android:drawablePadding="20dp"
        android:ems="10"
        android:hint="@string/username1"
        android:inputType="text"
        android:paddingLeft="20sp"
        android:paddingRight="20sp"
        android:textColor="@color/white"
        android:textColorHint="#E9E9EB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintVertical_bias="0.043" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="270dp"
        android:layout_height="49dp"
        android:layout_marginTop="25dp"
        android:autofillHints="password"
        android:background="@drawable/wborder"
        android:drawablePadding="20dp"
        android:ems="10"
        android:hint="@string/password1"
        android:inputType="textVisiblePassword"
        android:paddingLeft="20sp"
        android:paddingRight="20sp"
        android:textColor="@color/white"
        android:textColorHint="#E9E9EB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernem"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/confirm"
        android:layout_width="270dp"
        android:layout_height="49dp"
        android:layout_marginTop="25dp"
        android:autofillHints="password"
        android:background="@drawable/wborder"
        android:drawablePadding="20dp"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textVisiblePassword"
        android:paddingLeft="20sp"
        android:paddingRight="20sp"
        android:textColor="@color/white"
        android:textColorHint="#E9E9EB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/registerbutton"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:backgroundTint="#2C3E50"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm"
        app:layout_constraintVertical_bias="0.255" />

    <TextView
        android:id="@+id/signin"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/already_have_an_account_sign_in"
        android:textColor="#E9E9EB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.671"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerbutton"
        app:layout_constraintVertical_bias="0.258"
        tools:ignore="TextSizeCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>