<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/greenbackground"
    android:backgroundTint="#A8D8B8"
    android:backgroundTintMode="multiply"
    android:paddingStart="20sp"
    tools:context=".MainActivity"
    tools:ignore="RtlSymmetry">


    <ImageView
        android:id="@+id/sdsc"
        android:layout_width="410dp"
        android:layout_height="281dp"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="13dp"
        android:contentDescription="@string/todo"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.733"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.121"
        app:srcCompat="@drawable/nyahalo" />

    <EditText
        android:id="@+id/username"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/wborder"
        android:drawableStart="@drawable/user"
        android:drawablePadding="20dp"
        android:ems="10"
        android:fontFamily="sans-serif-thin"
        android:hint="@string/username"
        android:inputType="text"
        android:paddingLeft="20sp"
        android:paddingRight="20sp"
        android:textColor="@color/white"
        android:textColorHint="#9EFFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.384"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sdsc"
        app:layout_constraintVertical_bias="0.451" />

    <EditText
        android:id="@+id/passcode"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:layout_marginTop="5dp"
        android:autofillHints="password"
        android:background="@drawable/wborder"
        android:drawableStart="@drawable/security"
        android:drawablePadding="20dp"
        android:ems="10"
        android:fontFamily="sans-serif-thin"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:passwordToggleEnabled="true"
        android:paddingLeft="20sp"
        android:paddingRight="20sp"
        android:textColor="#FFFFFF"
        android:textColorHint="#9EFFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.384"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"
        app:layout_constraintVertical_bias="0.085" />

    <Button
        android:id="@+id/button"
        android:layout_width="145dp"
        android:layout_height="57dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="#2C3E50"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"
        app:layout_constraintVertical_bias="0.735" />

    <TextView
        android:id="@+id/Regis"
        android:layout_width="170dp"
        android:layout_height="31dp"
        android:fontFamily="sans-serif-medium"
        android:scrollbarSize="10dp"
        android:text="@string/register_account"
        android:textColor="#E9E9EB"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.333" />


</androidx.constraintlayout.widget.ConstraintLayout>