<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/borrow_book"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/greenbackground"
    android:backgroundTint="#A8D8B8"
    android:allowBackup="true"
    android:process=":main"
    android:backgroundTintMode="multiply"
    tools:context="database.borrow.BorrowBookActivity">

    <ImageView
        android:id="@+id/savio2"
        android:layout_width="410dp"
        android:layout_height="281dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/todo1"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/nyahalo" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="390dp"
        android:layout_height="567dp"
        android:layout_marginBottom="76dp"
        android:scaleType="fitCenter"
        android:background="@drawable/rectangle"
        android:src="@drawable/rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/savio2" />

    <EditText
        android:id="@+id/bookTitle"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="312dp"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
        app:layout_constraintEnd_toEndOf="@+id/imageView6"
        app:layout_constraintStart_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/borrowphoto"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/bookAuthor"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/author2"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
        app:layout_constraintEnd_toEndOf="@+id/imageView6"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/bookTitle"
        app:layout_constraintVertical_bias="0.015" />


    <EditText
        android:id="@+id/bookPublish"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/publish_date"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView6"
        app:layout_constraintStart_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/bookAuthor"
        app:layout_constraintVertical_bias="0.126" />

    <Button
        android:id="@+id/borrowButton"
        android:layout_width="115dp"
        android:layout_height="53dp"
        android:text="@string/borrow12"
        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
        app:layout_constraintEnd_toEndOf="@+id/imageView6"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/bookPublish"
        app:layout_constraintVertical_bias="0.301" />

    <ImageView
        android:id="@+id/borrowphoto"
        android:layout_width="221dp"
        android:layout_height="151dp"
        android:clickable="true"
        android:focusable="true"
        android:scaleType="fitCenter"
        android:src="@android:drawable/ic_menu_gallery"
        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
        app:layout_constraintEnd_toEndOf="@+id/imageView6"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toTopOf="@+id/imageView6"
        app:layout_constraintVertical_bias="0.093" />


</androidx.constraintlayout.widget.ConstraintLayout>