<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/adinsertpage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/greenbackground"
    android:backgroundTint="#A8D8B8"
    android:backgroundTintMode="multiply"
    tools:context=".admin.insertbooks">


    <ImageView
        android:id="@+id/adsavio2"
        android:layout_width="380dp"
        android:layout_height="250dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/todo"
        android:scaleType="centerInside"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/nyahalo" />

    <ImageView
        android:id="@+id/adborder2"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/adsavio2"
        app:layout_constraintVertical_bias="0.309"
        app:srcCompat="@drawable/rectangle" />

    <TextView
        android:id="@+id/adBooks2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="19dp"
        android:backgroundTintMode="multiply"
        android:fontFamily="@font/jaro"
        android:text="BOOKS"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/adborder2"
        app:layout_constraintEnd_toEndOf="@+id/adborder2"
        app:layout_constraintHorizontal_bias="0.121"
        app:layout_constraintStart_toStartOf="@+id/adborder2"
        app:layout_constraintTop_toTopOf="@+id/adborder2" />

    <TextView
        android:id="@+id/adBorrow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/jaro"
        android:text="@string/add1"
        android:textSize="18sp"
        android:background="@drawable/borderui"
        app:layout_constraintBottom_toBottomOf="@+id/adborder2"
        app:layout_constraintEnd_toEndOf="@+id/adborder2"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/adborder2"
        app:layout_constraintTop_toTopOf="@+id/adborder2"
        app:layout_constraintVertical_bias="0.375" />

    <TextView
        android:id="@+id/adAccount2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/jaro"
        android:text="@string/book_log12"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/adborder2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.872"
        app:layout_constraintStart_toStartOf="@+id/adborder2"
        app:layout_constraintTop_toTopOf="@+id/adborder2"
        app:layout_constraintVertical_bias="0.375" />


    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="340dp"
        android:layout_height="470dp"
        android:background="@drawable/rectangle"
        android:src="@drawable/rectangle"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adborder2"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/Title"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:layout_marginBottom="272dp"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
        app:layout_constraintEnd_toEndOf="@+id/imageView6"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/author"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/author2"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
        app:layout_constraintEnd_toEndOf="@+id/imageView6"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/Title"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/publish"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/publish_date"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
        app:layout_constraintEnd_toEndOf="@+id/imageView6"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/author"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/description"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:paddingEnd="5dp"
        android:ems="10"
        android:hint="@string/description123"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
        app:layout_constraintEnd_toEndOf="@+id/imageView6"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/author"
        app:layout_constraintVertical_bias="0.258"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/addbtn"
        android:layout_width="115dp"
        android:layout_height="53dp"
        android:text="@string/add2"
        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
        app:layout_constraintEnd_toEndOf="@+id/imageView6"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/publish"
        app:layout_constraintVertical_bias="0.707" />

    <EditText
        android:id="@+id/totalCopies"
        android:layout_width="65dp"
        android:layout_height="52dp"
        android:hint="Stock"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.972"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adborder2"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/frontview"
        android:layout_width="180dp"
        android:layout_height="120dp"
        android:clickable="true"
        android:focusable="true"
        android:scaleType="fitCenter"
        android:src="@android:drawable/ic_menu_gallery"
        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
        app:layout_constraintEnd_toEndOf="@+id/imageView6"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toTopOf="@+id/imageView6"
        app:layout_constraintVertical_bias="0.045" />


</androidx.constraintlayout.widget.ConstraintLayout>